Fixed bugs in Plesk migration, and added automatic detection of alias domains in the original backup. SSL certificates and keys from the backup are also migrated. Also added initial support for Windows Plesk backups.
A domain's private IP and external IP for DNS are now also included in SPF records.
When restoring a backup, switch to a supported PHP execution mode if the original Apache config used an un-supported mode.
A default email template for status monitors can now be defined, when using Webmin 1.404 or later.
Added a check for Sendmail not accepting email on the external interface, which is the default in some distributions.
Updated the b2evolution, DotProject, FAQMasterFlex, Advanced Guestbook, Help Center Live, Integramod, Nucleus, PHPwebsite and PollPHP script installers to support PHP version 5.
When a sub-domain is created with the same name as a record in the parent domain, the record is not removed whem the domain is deleted.
When using Qmail, domains with the same name as the system's primary hostname (typically from the <tt>control/me</tt> file) are not longer allowed, as they break Virtualmin's use of the <tt>virtualdomains</tt> file.
When email is disabled for a domain, only MX and mail records pointing to the Virtualmin system or known secondaries are removed.
When restoring a backup of a domain that doesn't exist on the system, it's IP address can be changed or re-allocated from the range available on your system. This makes migration of domains with private IP addresses between systems on different networks easier.
The list of new features includes the date Virtualmin was installed.
Email to domain owners for over-bandwidth warnings, new script notifications and others can now come from their resellers' addresses, if set. This behaviour must be enabled using a new setting on the <b>Module Config</b> page, under <b>Actions upon server and user creation</b>.
---- Changes since 3.54 ----
Updated the osTicket script installer to versoin 1.6.rc4.