@@ -10,13 +10,13 @@
 
  x Upload to download.webmin.com
 
- - Add to website
+ x Add to website
 
  - Add the freshmeat.net
 
  - Announce on mailing list
 
- - Add to updates.txt
+ x Add to updates.txt
 
- - Release plugins
+ x Release plugins
 
